--- a/_config.yml
+++ b/_config.yml
@@ -4,12 +4,12 @@
 # ---------------------------------------------------------------
 
 # Site
-title: NexT
-subtitle:
-description:
-author: John Doe
+title: Li Hao's Blog
+subtitle: DO GREAT THINGS
+description: DO GREAT THINGS
+author: Li Hao
 # Support language: de, en, fr-FR, id, ja, ko, pt-BR, pt, ru, zh-Hans, zh-hk, zh-tw
-language: en
+language: zh-Hans
 date_format: '%Y-%m-%d'
 
 # URL
@@ -87,7 +87,7 @@ keywords: "Jekyll, NexT"
 rss:
 
 # Specify the date when the site was setup
-#since: 2015
+since: 2019
 
 # icon between year and author @Footer
 authoricon: heart
@@ -119,7 +119,7 @@ index_with_subtitle: false
 menu:
   home: /
   #categories: /categories/
-  #about: /about/
+  about: /about/
   archives: /archives/
   tags: /tags/
   #sitemap: /sitemap.xml
@@ -175,18 +175,21 @@ font:
     # external: true will load this font family from host.
     external: true
     family: Lato
+    size: 28 
 
   # Font settings for Headlines (h1, h2, h3, h4, h5, h6)
   # Fallback to `global` font settings.
   headings:
     external: true
     family:
+    size: 28
 
   # Font settings for posts
   # Fallback to `global` font settings.
   posts:
     external: true
     family:
+    size: 24
 
   # Font settings for Logo
   # Fallback to `global` font settings.
@@ -194,7 +197,7 @@ font:
   logo:
     external: true
     family:
-    size:
+    size: 24
 
   # Font settings for <code> and code blocks.
   codes:
@@ -213,8 +216,11 @@ font:
 # Social Links
 # Key is the link label showing to end users.
 # Value is the target link (E.g. GitHub: https://github.com/iissnan)
-#social:
+social:
   #LinkLabel: Link
+  GitHub: https://github.com/lifuguan
+  知乎 : https://www.zhihu.com/people/lifuguan-48/activities
+
 
 
 # Social Links Icons
@@ -229,11 +235,12 @@ social_icons:
   GitHub: github
   Twitter: twitter
   Weibo: weibo
+  知乎: zhihu
 
 
 # Sidebar Avatar
 # in directory: /assets/images/avatar.gif
-#avatar:
+avatar: /assets/images/man.jpg
 
 
 # Table Of Contents in the Sidebar
@@ -264,8 +271,8 @@ sidebar:
   #  - always  expand for all pages automatically
   #  - hide    expand only when click on the sidebar toggle icon.
   #  - remove  Totally remove sidebar including sidebar toggle.
-  display: post
-  #display: always
+  #display: post
+  display: always
   #display: hide
   #display: remove
 
