--- a/_config.yml
+++ b/_config.yml
@@ -288,11 +288,11 @@ sidebar:
 
 
 # Blog rolls
-#links_title: Links
-#links_layout: block
+links_title: 友链
+links_layout: block
 #links_layout: inline
 #links:
-  #Title: http://example.com/
+  Title: https://noauxy.github.io
 
 
 # ---------------------------------------------------------------
