repair the link bug

--- a/_config.yml
+++ b/_config.yml
@@ -292,7 +292,7 @@ links_title: 友链
 links_layout: block
 # #links_layout: inline
 links:
-   Auxy: noauxy.github.io
+   Auxy: http://noauxy.github.io
    Hwaii: http://waiifrog.top/
    QiayuanLiao: https://qiayuanliao.github.io/
 
